--- a/netlify.toml
+++ b/netlify.toml
@@ -1,2 +1,9 @@
 [build]
-publish = "public/"
+publish = "public"
+command = "hugo"
+
+[context.production.environment]
+HUGO_VERSION = "0.81.0"
+
+[context.deploy-preview.environment]
+HUGO_VERSION = "0.81.0"
