--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
     "postcss-cli": "^8.3.1",
     "postcss-import": "^14.0.0",
     "tailwindcss": "^2.0.3"
+  },
+  "dependencies": {
+    "@tailwindcss/forms": "^0.3.2"
   }
 }
