--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "tailwindcss": "^2.0.3"
   },
   "dependencies": {
-    "@tailwindcss/forms": "^0.3.2"
+    "@tailwindcss/forms": "^0.3.2",
+    "@types/google.maps": "^3.44.6"
   }
 }
