--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "tailwindcss": "^2.0.3"
   },
   "dependencies": {
+    "@googlemaps/js-api-loader": "^1.11.4",
     "@tailwindcss/forms": "^0.3.2",
-    "@types/google.maps": "^3.44.6"
+    "@types/google.maps": "^3.44.6",
+    "@types/node": "^15.6.0"
   }
 }
