Update age label

--- a/data/programs/1-infant.yml
+++ b/data/programs/1-infant.yml
@@ -1,4 +1,4 @@
 name: Infant
-age_range: Age 1 &ndash; 18 months
-description: Our infant program provides for the individual needs of the child. We incorporate programming that allows for staff to encourage independence and present fundamental foundations for this age group.
+age_range: Ages 1 &ndash; 18 months
+description: Our infant program provides for the individual needs of the child. We incorporate programming that allows for staff to encourAges independence and present fundamental foundations for this Ages group.
 image: images/programs/infant.jpg
