--- a/data/programs/3-preschool.yml
+++ b/data/programs/3-preschool.yml
@@ -1,4 +1,4 @@
 name: Preschool
-age_range: Age 2&half; &ndash; 4 years
-description: During our daily preschool program we incorporate activities such as large group, cognitive, fine and gross motor, sensory, language and dramatic play to encourage growth and development.
+age_range: Ages 2&half; &ndash; 4 years
+description: During our daily preschool program we incorporate activities such as large group, cognitive, fine and gross motor, sensory, languAges and dramatic play to encourAges growth and development.
 image: images/programs/preschool.jpg
