--- a/data/programs/5-before-after.yml
+++ b/data/programs/5-before-after.yml
@@ -1,4 +1,4 @@
 name: Before & After
-age_range: Age 5 &ndash; 10 years
+age_range: Ages 5 &ndash; 10 years
 description: Our program is dedicated to the development of children in school with age-appropriate, educational and stimulating activities that develop their skills to further their growth in all areas such as math, science, literacy and creativity.
 image: images/programs/before-after.jpg
