Add staff, update tailwind

--- a/config.toml
+++ b/config.toml
@@ -1,3 +1,5 @@
 baseURL = "http://example.org/"
 languageCode = "en-us"
 title = "Christian Daycare Aurora"
+disableKinds = ["section", "taxonomy"]
+ignoreErrors = ["error-disable-taxonomy"]
