--- a/data/faq.yml
+++ b/data/faq.yml
@@ -4,6 +4,12 @@
   answer: Yes, the Ministry checks up on us regularly and we are very proud of our positive and open relationship with them.
 - question: Are your staff qualified?
   answer: Yes. All of our extraordinary staff is either certified with a Diploma, Degree or some combination of both. Our staff has their vulnerable sector screening checks done as well as a current Infant/Child CPR and First-Aid certificate.
+- question: Do you accept subsidy?
+  answer: Yes, in some locations, where the region will permit. Sadly, the locations in the City of Toronto are not permitted to offer subsidy because they only make it available at non-profit centres. When they allow us to, we will gladly provide it.
+- question: Is there a discount for siblings?
+  answer: Yes, siblings in the family receive a discount off the older child, please contact your closest centre.
+- question: What are your rates?
+  answer: Please contact the location closest to you as fees differ by geographic location.
 - question: What meals do you provide?
   answer: We offer morning breakfast, hot lunch, afternoon snacks and fruit at 5 o’clock. We only serve water and milk to drink and we make all necessary dietary accommodations for our children with allergies. The menu is based on the Canada Food Guide and has been created by a nutritionist. It is also approved and recommended by a dietitian. Our chefs have their food handling certificates and amazing palates! Call your closest centre for menu information.
 - question: Do you accommodate children with special needs?
