--- a/config.toml
+++ b/config.toml
@@ -3,3 +3,6 @@ languageCode = "en-us"
 title = "Christian Daycare Aurora"
 disableKinds = ["section", "taxonomy"]
 ignoreErrors = ["error-disable-taxonomy"]
+
+[build]
+writeStats = true
