Update content and staff section

--- a/data/staff/2-laura.yml
+++ b/data/staff/2-laura.yml
@@ -1,12 +1,9 @@
 bio: >-
-  Hello, my name is Laura Castillo and I am the Assistant Supervisor and a
-  Registered Early Childhood Educator here at Angelic Treasures Christian Daycare in
-  Aurora. I am a wife and mother of two boys. I graduated from Seneca College in 2015
-  where I obtained my Diploma of Early Childhood Education. I have over 10 years of
-  experience working with children through ages 0-12 and loved every moment. I
-  decided to become an educator because I wanted to help shape and form the work
-  of tomorrow. I believe that children are our future and its out duty to raise our
-  children to lead healthy, successful and independent lives.
-position: Lead ECE Teacher
+  I am a wife and mother of two boys. I graduated from Seneca College in 2015
+  where I obtained my Diploma in Early Childhood Education. I have over 10 years of
+  experience working with children up to age 12 and loved every moment of it. I
+  decided to become an educator because I believe that children are our future and 
+  it's out duty to raise our children to lead healthy, successful and independent lives.
+position: Lead ECE
 name: Laura Castillo
 photo: "images/staff/laura.jpg"
