--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,8 +2,7 @@
     "files.exclude": {
         "**/node_modules": true,
         "public": true,
-        "resources": true,
-        "hugo_stats.json": true
+        "resources": true
     },
     "search.exclude": {
         "hugo_stats.json": true,
