--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -19,5 +19,6 @@
     "[html]": {
         "editor.formatOnSave": true,
         "editor.defaultFormatter": "vscode.html-language-features"
-    }
+    },
+    "html.format.wrapAttributes": "preserve-aligned"
 }
