--- a/data/staff/1-vicky.yml
+++ b/data/staff/1-vicky.yml
@@ -1,9 +1,4 @@
-bio: >-
-  I am a wife and mother of two boys. I graduated from Seneca College in 2015
-  where I obtained my Diploma in Early Childhood Education. I have over 10 years of
-  experience working with children up to age 12 and loved every moment of it. I
-  decided to become an educator because I believe that children are our future and 
-  it's out duty to raise our children to lead healthy, successful and independent lives.
+bio:
 position: Supervisor
 name: Vicky Dimitropoulos
 photo: "images/staff/unknown.jpg"
