Format YAML files, remove Laura staff profile

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -20,5 +20,10 @@
         "editor.formatOnSave": true,
         "editor.defaultFormatter": "vscode.html-language-features"
     },
-    "html.format.wrapAttributes": "preserve-aligned"
+    "[yaml]": {
+        "editor.formatOnSave": true,
+        "editor.defaultFormatter": "redhat.vscode-yaml"
+    },
+    "html.format.wrapAttributes": "preserve-aligned",
+    "yaml.format.proseWrap": "always"
 }
