--- a/data/programs/0-classes.yml
+++ b/data/programs/0-classes.yml
@@ -1,3 +1,7 @@
 name: Classes
-description: Angelic Treasures focuses on the development of children. Activities are planned on a daily basis to help improve motor development, cognitive skills and overall learning. Specific activities are designed to help each child progress through age appropriate milestones.
+description:
+  Angelic Treasures focuses on the development of children. Activities are
+  planned on a daily basis to help improve motor development, cognitive skills
+  and overall learning. Specific activities are designed to help each child
+  progress through age appropriate milestones.
 image: images/programs/classes.jpg
