--- a/data/faq.yml
+++ b/data/faq.yml
@@ -1,18 +1,66 @@
 - question: Do we have to be Christian to attend?
-  answer: No, we are Christian but you do not have to be. In fact, the families in our centres are from all backgrounds and all religions. We teach Christian values and Bible stories; however, we do not implement services nor sacraments. We teach children about all the values that are rooted in Christianity such as love, forgiveness, honesty, charity, gentleness, kindness and everything else that is wholesome. Parents/Guardians are asked to sign a statement of faith to acknowledge that we will be teaching said curriculum.
+  answer:
+    No, we are Christian but you do not have to be. In fact, the families in our
+    centres are from all backgrounds and all religions. We teach Christian
+    values and Bible stories; however, we do not implement services nor
+    sacraments. We teach children about all the values that are rooted in
+    Christianity such as love, forgiveness, honesty, charity, gentleness,
+    kindness and everything else that is wholesome. Parents/Guardians are asked
+    to sign a statement of faith to acknowledge that we will be teaching said
+    curriculum.
+
 - question: Are you licensed by the Ministry of Education?
-  answer: Yes, the Ministry checks up on us regularly and we are very proud of our positive and open relationship with them.
+  answer:
+    Yes, the Ministry checks up on us regularly and we are very proud of our
+    positive and open relationship with them.
+
 - question: Are your staff qualified?
-  answer: Yes. All of our extraordinary staff is either certified with a Diploma, Degree or some combination of both. Our staff has their vulnerable sector screening checks done as well as a current Infant/Child CPR and First-Aid certificate.
+  answer:
+    Yes. All of our extraordinary staff is either certified with a Diploma,
+    Degree or some combination of both. Our staff has their vulnerable sector
+    screening checks done as well as a current Infant/Child CPR and First-Aid
+    certificate.
+
 - question: Do you accept subsidy?
-  answer: Yes, in some locations, where the region will permit. Sadly, the locations in the City of Toronto are not permitted to offer subsidy because they only make it available at non-profit centres. When they allow us to, we will gladly provide it.
+  answer:
+    Yes, in some locations, where the region will permit. Sadly, the locations
+    in the City of Toronto are not permitted to offer subsidy because they only
+    make it available at non-profit centres. When they allow us to, we will
+    gladly provide it.
+
 - question: Is there a discount for siblings?
-  answer: Yes, siblings in the family receive a discount off the older child, please contact your closest centre.
+  answer:
+    Yes, siblings in the family receive a discount off the older child, please
+    contact your closest centre.
+
 - question: What are your rates?
-  answer: Please contact the location closest to you as fees differ by geographic location.
+  answer:
+    Please contact the location closest to you as fees differ by geographic
+    location.
+
 - question: What meals do you provide?
-  answer: We offer morning breakfast, hot lunch, afternoon snacks and fruit at 5 o’clock. We only serve water and milk to drink and we make all necessary dietary accommodations for our children with allergies. The menu is based on the Canada Food Guide and has been created by a nutritionist. It is also approved and recommended by a dietitian. Our chefs have their food handling certificates and amazing palates! Call your closest centre for menu information.
+  answer:
+    We offer morning breakfast, hot lunch, afternoon snacks and fruit at 5
+    o’clock. We only serve water and milk to drink and we make all necessary
+    dietary accommodations for our children with allergies. The menu is based on
+    the Canada Food Guide and has been created by a nutritionist. It is also
+    approved and recommended by a dietitian. Our chefs have their food handling
+    certificates and amazing palates! Call your closest centre for menu
+    information.
+
 - question: Do you accommodate children with special needs?
-  answer: We accept children of all abilities and accommodate all learning needs. We believe in complete inclusion and integration. Please contact us with your child’s differing abilities and we will work with you to make it happen. We also collaborate with regional health teams (OTs, Physio, Doctors, etc.) and we do everything we can to give our special angels the best in service!
+  answer:
+    We accept children of all abilities and accommodate all learning needs. We
+    believe in complete inclusion and integration. Please contact us with your
+    child’s differing abilities and we will work with you to make it happen. We
+    also collaborate with regional health teams (OTs, Physio, Doctors, etc.) and
+    we do everything we can to give our special angels the best in service!
+
 - question: How do your centres differ from the rest?
-  answer: We offer a Christian curriculum and enrichment programs for children of all ages including French. Our programs are inclusive, targeted and holistic. We foster all areas of development including social, emotional, physical and mental. Our environment focuses on child-led learning and adheres to the pillars of How Does Learning Happen and the ELECT documents. See above to learn more about programs.
+  answer:
+    We offer a Christian curriculum and enrichment programs for children of all
+    ages including French. Our programs are inclusive, targeted and holistic. We
+    foster all areas of development including social, emotional, physical and
+    mental. Our environment focuses on child-led learning and adheres to the
+    pillars of How Does Learning Happen and the ELECT documents. See above to
+    learn more about programs.
