--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "tailwindcss": "^2.1.2"
   },
   "dependencies": {
+    "@tailwindcss/typography": "^0.4.1",
     "@types/google.maps": "^3.44.6",
     "@types/node": "^15.6.0",
     "alpinejs": "^2.8.2"
