--- a/data/faq.yml
+++ b/data/faq.yml
@@ -64,3 +64,16 @@
     mental. Our environment focuses on child-led learning and adheres to the
     pillars of How Does Learning Happen and the ELECT documents. See above to
     learn more about programs.
+
+- question: How are you handling COVID-19?
+  answer: |
+    We're committed to protecting the health and safety of all of our children,
+    staff, and families during the COVID-19 pandemic.
+
+    To ensure everyone’s well-being, we are going above and beyond to follow all
+    health and safety protocols as outlined by the Ministry of Education and
+    Public Health guidelines, as well as introducing our new re-opening
+    guidelines.
+
+    If you have any questions or concerns, please feel free to reach out. We
+    look forward to seeing you and your family.
