--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -2,14 +2,6 @@
   "version": "2.0.0",
   "tasks": [
     {
-      "type": "npm",
-      "script": "install",
-      "problemMatcher": [],
-      "label": "npm: install",
-      "detail": "install dependencies from package",
-      "group": "build"
-    },
-    {
       "type": "shell",
       "command": "hugo serve",
       "label": "hugo: serve",
@@ -17,6 +9,9 @@
       "group": {
         "kind": "build",
         "isDefault": true
+      },
+      "runOptions": {
+        "instanceLimit": 1
       }
     }
   ]
