--- a/data/faq.yml
+++ b/data/faq.yml
@@ -16,45 +16,37 @@
 
 - question: Are your staff qualified?
   answer:
-    Yes. All of our extraordinary staff is either certified with a Diploma,
-    Degree or some combination of both. Our staff has their vulnerable sector
-    screening checks done as well as a current Infant/Child CPR and First-Aid
-    certificate.
+    All of our extraordinary staff are registered with the College of Early
+    Childhood Educators and have a diploma in ECE. Our staff has their
+    Vulnerable Sector Screenings and current CPR and First Aid certificates. We
+    encourage you to come in for a tour and meet some of them yourself.
 
-- question: Do you accept subsidy?
+- question: Are you a subsidized daycare?
   answer:
-    Yes, in some locations, where the region will permit. Sadly, the locations
-    in the City of Toronto are not permitted to offer subsidy because they only
-    make it available at non-profit centres. When they allow us to, we will
-    gladly provide it.
+    We are currently unable to offer subsidies, we will be offering subdidy in
+    2022.
 
 - question: Is there a discount for siblings?
   answer:
-    Yes, siblings in the family receive a discount off the older child, please
-    contact your closest centre.
-
-- question: What are your rates?
-  answer:
-    Please contact the location closest to you as fees differ by geographic
-    location.
+    Yes, we offer a discount for the eldest sibling, please contact us for more
+    inforamtion.
 
 - question: What meals do you provide?
   answer:
-    We offer morning breakfast, hot lunch, afternoon snacks and fruit at 5
-    o’clock. We only serve water and milk to drink and we make all necessary
-    dietary accommodations for our children with allergies. The menu is based on
-    the Canada Food Guide and has been created by a nutritionist. It is also
-    approved and recommended by a dietitian. Our chefs have their food handling
-    certificates and amazing palates! Call your closest centre for menu
-    information.
+    We offer morning breakfast, hot lunch, afternoon snacks and fruit at 5PM. We
+    only serve water and milk to drink and we make all necessary dietary
+    accommodations for our children with allergies. The menu is based on the
+    Canada Food Guide with the assistance of a nutritionist. Our chefs have
+    their food handling certificates and great palettes.
 
 - question: Do you accommodate children with special needs?
   answer:
-    We accept children of all abilities and accommodate all learning needs. We
-    believe in complete inclusion and integration. Please contact us with your
-    child’s differing abilities and we will work with you to make it happen. We
-    also collaborate with regional health teams (OTs, Physio, Doctors, etc.) and
-    we do everything we can to give our special angels the best in service!
+    We accept children of all abilities and learning needs. We believe in
+    complete inclusion and integration. Please contact us with your child's
+    differing abilities and we will work with you to make it happen. We also
+    collaborate with healthcare professionals (occupational therapists,
+    physiotherapists, doctors, etc.) and we do everything we can to give our
+    special angels the best in service.
 
 - question: How do your centres differ from the rest?
   answer:
@@ -62,18 +54,15 @@
     ages including French. Our programs are inclusive, targeted and holistic. We
     foster all areas of development including social, emotional, physical and
     mental. Our environment focuses on child-led learning and adheres to the
-    pillars of How Does Learning Happen and the ELECT documents. See above to
-    learn more about programs.
+    pillars of _How Does Learning Happen_ and _Early Learning for Every Child
+    Today (ELECT)_.
 
 - question: How are you handling COVID-19?
-  answer: |
+  answer:
     We're committed to protecting the health and safety of all of our children,
-    staff, and families during the COVID-19 pandemic.
-
-    To ensure everyone’s well-being, we are going above and beyond to follow all
-    health and safety protocols as outlined by the Ministry of Education and
-    Public Health guidelines, as well as introducing our new re-opening
-    guidelines.
-
-    If you have any questions or concerns, please feel free to reach out. We
-    look forward to seeing you and your family.
+    staff and families during the COVID-19 pandemic. To ensure everyone's
+    well-being, we are going above and beyond to follow all health and safety
+    protocols as outlined by the Ministry of Education and Public Health as well
+    as introducing our new reopening guidelines. If you have any questions or
+    concerns, please feel free to reach out. We look forward to seeing you and
+    your family.
