--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@googlemaps/js-api-loader": "^1.11.4",
     "@tailwindcss/forms": "^0.3.3",
     "@tailwindcss/typography": "^0.4.1",
+    "@types/facebook-pixel": "0.0.23",
     "alpinejs": "^2.8.2",
     "autoprefixer": "^10.2.6",
     "postcss-cli": "^8.3.1",
