--- a/netlify.toml
+++ b/netlify.toml
@@ -1,9 +1,9 @@
 [build]
 publish = "public"
-command = "hugo"
+command = "hugo --minify"
 
 [context.production.environment]
-HUGO_VERSION = "0.81.0"
+HUGO_VERSION = "0.83.1"
 
 [context.deploy-preview.environment]
-HUGO_VERSION = "0.81.0"
+HUGO_VERSION = "0.83.1"
