Style location section

--- a/data/staff.yml
+++ b/data/staff.yml
@@ -5,12 +5,14 @@
     I am a wife and mother of two beautiful children. I graduated from Seneca
     College in 1998 with Honors where I obtained my Diploma of Early Childhood
     Education. I have over 23 years of experience working with children ages 0
-    through 12 and loved every moment of it. I decided to become an Early
-    Childhood Educator because I wanted to help shape and form the children of
-    tomorrow. I believe that children are our future, they require love and
-    nurturing to become strong independent individuals.  As the supervisor of
-    this center, I am looking forward to working with the staff and families to
-    create a welcoming environment for the children.
+    through 12 and loved every moment of it. 
+
+    I decided to become an Early Childhood Educator because I wanted to help
+    shape and form the children of tomorrow. I believe that children are our
+    future, they require love and nurturing to become strong independent
+    individuals.  As the supervisor of this center, I am looking forward to
+    working with the staff and families to create a welcoming environment for
+    the children.
 
 - name: Jahnae Heart
   position: RECE
