--- a/data/staff.yml
+++ b/data/staff.yml
@@ -1,6 +1,6 @@
 - name: Vicky Dimitropoulos
   position: Centre Supervisor
-  photo: "images/staff/unknown.jpg"
+  photo: "images/staff/vicky.jpg"
   bio: >-
     I am a wife and mother of two beautiful children. I graduated from Seneca
     College in 1998 with Honors where I obtained my Diploma of Early Childhood
