--- a/data/values.yml
+++ b/data/values.yml
@@ -1,18 +1,18 @@
-- icon: images/icons/growth.png
+- icon: images/values/growth.png
   title: Growth & Development
   text:
     Our programs are focused on supporting your child’s overall development.
     Your child will participate in a variety of age-appropriate activities that
     are educational, engaging and most importantly&ndash;fun!
 
-- icon: images/icons/academic.png
+- icon: images/values/academic.png
   title: Academic Advancement
   text:
     It’s never too early to set your child up for future success. With our
     French offerings, well-rounded curriculum, and home-away-from-home learning
     environment, your child will have the tools they need to thrive.
 
-- icon: images/icons/confidence.png
+- icon: images/values/confidence.png
   title: Confidence & Communication
   text:
     At daycare, children have the opportunity to socialize with both kids and
