--- a/package.json
+++ b/package.json
@@ -11,14 +11,14 @@
   "homepage": "https://github.com/eberkund/atcd-aurora#readme",
   "devDependencies": {
     "@types/google.maps": "^3.45.1",
-    "@types/node": "^15.12.1"
+    "@types/node": "^15.12.1",
+    "@types/facebook-pixel": "0.0.23"
   },
   "dependencies": {
     "@googlemaps/js-api-loader": "^1.11.4",
     "@tailwindcss/aspect-ratio": "^0.2.1",
     "@tailwindcss/forms": "^0.3.3",
     "@tailwindcss/typography": "^0.4.1",
-    "@types/facebook-pixel": "0.0.23",
     "alpinejs": "^2.8.2",
     "autoprefixer": "^10.2.6",
     "postcss-cli": "^8.3.1",
