Remove Jahnae pic until we take better one

--- a/data/staff.yml
+++ b/data/staff.yml
@@ -11,7 +11,7 @@
 
 - name: Jahnae Heart
   position: RECE
-  photo: "images/staff/jahnae.png"
+  # photo: "images/staff/jahnae.png"
   bio: >-
     I am a graduate of the ECE program at Centennial college. Over the years I
     have had the privilege of working with infants, toddlers, preschoolers and
