--- a/netlify.toml
+++ b/netlify.toml
@@ -4,8 +4,8 @@ command = "hugo --minify"
 
 [context.production.environment]
 HUGO_VERSION = "0.83.1"
-GOOGLE_MAPS_API_KEY = "AIzaSyBkJ6VAoRpfZ6OiOcAqiO5A9Jfo_ggN0gs"
+GOOGLE_MAPS_API_KEY = "AIzaSyBkJ6VAoRpfZ6OiOcAqiO5A9Jfo_ggN0gs" # production key
 
 [context.deploy-preview.environment]
 HUGO_VERSION = "0.83.1"
-GOOGLE_MAPS_API_KEY = "AIzaSyBkJ6VAoRpfZ6OiOcAqiO5A9Jfo_ggN0gs"
+GOOGLE_MAPS_API_KEY = "AIzaSyBkJ6VAoRpfZ6OiOcAqiO5A9Jfo_ggN0gs" # production key
