--- a/data/faq.yml
+++ b/data/faq.yml
@@ -26,7 +26,7 @@
 - question: Is there a discount for siblings?
   answer:
     Yes, we offer a discount for the eldest sibling. Please contact us for more
-    inforamtion.
+    information.
 
 - question: What meals do you provide?
   answer:
