--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,5 @@
 languageCode = "en-us"
+baseURL = "https://atdaycareaurora.com/"
 title = "Christian Daycare Aurora"
 disableKinds = ["section", "taxonomy"]
 ignoreErrors = ["error-disable-taxonomy"]
