--- a/data/staff.yml
+++ b/data/staff.yml
@@ -29,3 +29,18 @@
 #   position: Lead ECE
 #   name: Laura Castillo
 #   photo: "images/staff/laura.jpg"
+
+- name: Camila Pessoa
+  position: RECE
+  bio: >-
+    I was born and raised in Brazil and I immigrated to Canada in 2017 to study
+    at George Brown College. As a parent of three children, I recognize the
+    importance and benefits of early education and learning through play. I love
+    working with children and being part of their development and learning
+    process. Knowing that I can positively impact a child's development is an
+    honor. I am so excited to join and work with the Angelic Treasures team,
+    children and families.
+
+# - name: Marshanna Campbell
+#   position: RECE
+#   bio: >-
