Add Marshanna Campbell

--- a/data/staff.yml
+++ b/data/staff.yml
@@ -1,5 +1,5 @@
 - name: Vicky Dimitropoulos
-  position: Centre Supervisor
+  position: Supervisor
   photo: "images/staff/vicky.jpg"
   bio: >-
     I am a wife and mother of two beautiful children. I graduated from Seneca
@@ -11,7 +11,6 @@
 
 - name: Jahnae Heart
   position: RECE
-  # photo: "images/staff/jahnae.png"
   bio: >-
     I am a graduate of the ECE program at Centennial college. Over the years I
     have had the privilege of working with infants, toddlers, preschoolers and
@@ -35,12 +34,17 @@
   bio: >-
     I was born and raised in Brazil and I immigrated to Canada in 2017 to study
     at George Brown College. As a parent of three children, I recognize the
-    importance and benefits of early education and learning through play. I love
-    working with children and being part of their development and learning
-    process. Knowing that I can positively impact a child's development is an
-    honor. I am so excited to join and work with the Angelic Treasures team,
-    children and families.
+    importance and benefits of early education and learning through play.
 
-# - name: Marshanna Campbell
-#   position: RECE
-#   bio: >-
+    I love working with children and being part of their development and
+    learning process. Knowing that I can positively impact a child's development
+    is an honor. I am so excited to join and work with the Angelic Treasures
+    team, children and families.
+
+- name: Marshanna Campbell
+  position: RECE
+  bio: >-
+    My name is Marshanna and I am an RECE in the infant room. I attended Humber
+    College were I received both my Early Childhood Education and Personal
+    Support Worker diploma. I have worked with toddlers, pre-schoolers, school
+    age and JK/SK. I look forward to meeting each and every one of you.
