Correct bio capitalization

--- a/data/staff.yml
+++ b/data/staff.yml
@@ -13,7 +13,7 @@
   position: RECE
   photo: images/staff/jahnae.jpg
   bio: >-
-    I am a graduate of the ECE program at Centennial college. Over the years I
+    I am a graduate of the ECE program at Centennial College. Over the years I
     have had the privilege of working with infants, toddlers, preschoolers and
     school agers. I have many hobbies, one of them includes taking care of my
     little sisters. I have always had a love for children and I wish to become a
