--- a/data/staff.yml
+++ b/data/staff.yml
@@ -55,6 +55,6 @@
   position: Handyman
   photo: images/staff/paul.jpg
   bio: >-
-    I am currently studying for architecture and city planning. I am very
-    friendly and love to talk. When I am not causing Aaron's hair to go gray you
-    may spot me painting baseboards or patching drywall.
+    I am currently studying architecture and urban planning. I am very friendly
+    and love to talk. When I am not causing Aaron's hair to go gray you may spot
+    me painting baseboards or patching drywall.
