--- a/data/staff.yml
+++ b/data/staff.yml
@@ -1,3 +1,18 @@
+- name: Sharon Yang
+  position: Director
+  bio: >-
+    ...
+
+- name: Aaron Chen
+  position: Director
+  bio: >-
+    ...
+
+- name: Erik Berkun-Drevnig
+  position: Director
+  bio: >-
+    ...
+
 - name: Vicky Dimitropoulos
   position: Supervisor
   photo: "images/staff/vicky.jpg"
