--- a/data/staff.yml
+++ b/data/staff.yml
@@ -63,6 +63,7 @@
 
 - name: Marshanna Campbell
   position: RECE
+  photo: images/staff/marshanna.jpg
   bio: >-
     My name is Marshanna and I am an RECE in the infant room. I attended Humber
     College were I received both my Early Childhood Education and Personal
