--- a/data/camp/expect.yml
+++ b/data/camp/expect.yml
@@ -1,5 +1,5 @@
 - icon: assets/images/values/make-friends.svg
-  title: Friendship
+  title: Team Building
   classes: bg-green-100 text-green-700
   text:
     Campers will get to participate in a range of team building activities that
