--- a/data/staff.yml
+++ b/data/staff.yml
@@ -27,16 +27,16 @@
     forward to working with the staff and families to create a welcoming
     environment for the children.
 
-- name: Jahnae Heart
-  position: RECE
-  photo: images/staff/jahnae.jpg
-  bio: >-
-    I am a graduate of the ECE program at Centennial College. Over the years I
-    have had the privilege of working with infants, toddlers, preschoolers and
-    school agers. I have many hobbies, one of them includes taking care of my
-    little sisters. I have always had a love for children and I wish to become a
-    kindergarten teacher one day.  I look forward to meeting each and everyone
-    of you.
+# - name: Jahnae Heart
+#   position: RECE
+#   photo: images/staff/jahnae.jpg
+#   bio: >-
+#     I am a graduate of the ECE program at Centennial College. Over the years I
+#     have had the privilege of working with infants, toddlers, preschoolers and
+#     school agers. I have many hobbies, one of them includes taking care of my
+#     little sisters. I have always had a love for children and I wish to become a
+#     kindergarten teacher one day.  I look forward to meeting each and everyone
+#     of you.
 
 # - bio: >-
 #     I am a wife and mother of two boys. I graduated from Seneca College in 2015
