--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -8,7 +8,7 @@
       "detail": "start hugo development server",
       "options": {
         "env": {
-          "GOOGLE_MAPS_API_KEY": "AIzaSyAyz1ZuxDylHY9lVt4ex1hnBOWgmu02kyI"
+          "HUGO_GOOGLE_MAPS_API_KEY": "AIzaSyAyz1ZuxDylHY9lVt4ex1hnBOWgmu02kyI"
         }
       },
       "group": {
