--- a/data/staff.yml
+++ b/data/staff.yml
@@ -48,27 +48,27 @@
 #   name: Laura Castillo
 #   photo: "images/staff/laura.jpg"
 
-- name: Camila Pessoa
-  position: RECE
-  photo: images/staff/camila.jpg
-  bio: >-
-    I was born and raised in Brazil and I immigrated to Canada in 2017 to study
-    at George Brown College. As a parent of three children, I recognize the
-    importance and benefits of early education and learning through play.
+# - name: Camila Pessoa
+#   position: RECE
+#   photo: images/staff/camila.jpg
+#   bio: >-
+#     I was born and raised in Brazil and I immigrated to Canada in 2017 to study
+#     at George Brown College. As a parent of three children, I recognize the
+#     importance and benefits of early education and learning through play.
 
-    I love working with children and being part of their development and
-    learning process. Knowing that I can positively impact a child's development
-    is an honor. I am so excited to join and work with the Angelic Treasures
-    team, children and families.
+#     I love working with children and being part of their development and
+#     learning process. Knowing that I can positively impact a child's development
+#     is an honor. I am so excited to join and work with the Angelic Treasures
+#     team, children and families.
 
-- name: Marshanna Campbell
-  position: RECE
-  photo: images/staff/marshanna.jpg
-  bio: >-
-    My name is Marshanna and I am an RECE in the infant room. I attended Humber
-    College were I received both my Early Childhood Education and Personal
-    Support Worker diploma. I have worked with toddlers, pre-schoolers, school
-    age and JK/SK. I look forward to meeting each and every one of you.
+# - name: Marshanna Campbell
+#   position: RECE
+#   photo: images/staff/marshanna.jpg
+#   bio: >-
+#     My name is Marshanna and I am an RECE in the infant room. I attended Humber
+#     College were I received both my Early Childhood Education and Personal
+#     Support Worker diploma. I have worked with toddlers, pre-schoolers, school
+#     age and JK/SK. I look forward to meeting each and every one of you.
 
 # - name: Paul Berkun-Drevnig
 #   position: Handyman
