--- a/data/staff.yml
+++ b/data/staff.yml
@@ -58,7 +58,7 @@
 
 #     I love working with children and being part of their development and
 #     learning process. Knowing that I can positively impact a child's development
-#     is an honor. I am so excited to join and work with the Angelic Treasures
+#     is an honor. I am so excited to join and work with the First Smiles
 #     team, children and families.
 
 # - name: Marshanna Campbell
