--- a/data/programs.yml
+++ b/data/programs.yml
@@ -49,7 +49,7 @@
   image: images/programs/before-after.jpg
 # - name: Classes
 #   description:
-#     Angelic Treasures focuses on the development of children. Activities are
+#     First Smiles focuses on the development of children. Activities are
 #     planned on a daily basis to help improve motor development, cognitive skills
 #     and overall learning. Specific activities are designed to help each child
 #     progress through age appropriate milestones.
